# DeepEmailValidator

./: .gitignore  config.py  pyproject.toml
src/: cache.py  smtp_checker.py  validator.py
src/utils/: blacklist.py  cache.py  common.py  dns_resolver.py  smtp_checker.py
tests/: fixtures.py  test_cache.py  test_proxy.py
